base/src/test/resources/failure/levels/too-high.aya.txt
In file $FILE:1:15 ->

  1 | data List (A : uType 1) : uType 0
                     ^---^
  2 |  | nil
  3 |  | cons A (List A)

Error: The name `uType` is not defined in the current scope

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
